comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates cupiditate eius dicta quam, fuga, sunt iure molestiae, nihil deserunt suscipit quidem voluptas expedita modi architecto inventore obcaecati laboriosam nisi.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus id, ipsam porro laborum dignissimos numquam deserunt! Perspiciatis, vitae. Tenetur ipsam sapiente cumque dolorem odit neque aspernatur id explicabo iusto sint.</p>
         </article>
     </main>
 </body>
